add center css and height

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
   display: flex;
+  height: 100vh;
   justify-content: space-around;
+  align-items: center;
 }
 .controls {
   width: 40vw;
