--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@
 }
 .controls {
   width: 40vw;
+  display: flex;
+  flex-direction: column;
 }
 
 .box {
@@ -23,3 +25,7 @@
 .css-output {
   font-weight: bold;
 }
+
+input[type=color] {
+  margin: 15px 0;
+} 
